@startuml
'https://plantuml.com/class-diagram

class ToDoListApplication {
    main()
    start()
}

class ListController {
    -TableView table
    -TableColumn listName
    -TableColumn date
    -TableColumn status
    -TextField nameField
    -removeListButtonClicked()
    -removeList()
    -addItemButtonClicked()
    -addItem()
    -saveButtonClicked()
    -saveList()
    -loadButtonClicked()
    -loadList()
    -removeItemButtonClicked()
    -removeItem()
    -filterStatusButton()


}


class ListItem {
    -SimpleStringProperty itemName
    -SimpleStringProperty date
    -SimpleStringProperty status
    +ListItem()
    +getItem()
    +setItem()
    +getDate()
    +setDate()
    +getStatus()
    +setStatus()
}

javafx.Application <|-- ToDoListApplication
ToDoListApplication - ListController
javafx.Initializable  <---- listController



@enduml